--- a/CustomPrintScreen/app.config
+++ b/CustomPrintScreen/app.config
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
 <configSections>
-    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-        <section name="CustomPrintScreen.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+        <section name="CustomPrintScreen.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
     </sectionGroup>
 </configSections>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup><userSettings>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/></startup><userSettings>
         <CustomPrintScreen.Properties.Settings>
             <setting name="PopupOnOneMonitor" serializeAs="String">
                 <value>False</value>
@@ -17,7 +17,7 @@
                 <value />
             </setting>
             <setting name="DateFormat" serializeAs="String">
-                <value>MMdd HH:mm</value>
+                <value>MMdd HHmm</value>
             </setting>
         </CustomPrintScreen.Properties.Settings>
     </userSettings>
